# merlins-mirror

./: .docker_env  .gitignore  Dockerfile  README.md  _main_profile.py  download_files.py  hp_scan.py  load_compiled.py  main.py  merlin.py  notes.md  pyproject.toml  run_compile.py
mirror_ai/: _bkp_pipeline.py  base_pipeline.py  config.py  pipeline.py  pipeline_dream_pcm_sd15.py  pipeline_dream_pcm_sdxl_turbo.py  pipeline_dream_pcm_sdxl_xinsir.py  pipeline_dream_sdxl.py  pipeline_dream_sdxl_lightning.py  pipeline_lora_sd15.py  pipeline_pcm_sd15.py  pipeline_pcm_sdxl.py  pipeline_sdxl_hyper.py  pipeline_sdxl_t2i.py  profiling.py  stream_batch_pipeline.py  stream_batch_pipeline_BKP.py  utils.py  video.py
mirror_ai/compile/: __init__.py  builder.py  engine.py  go_compile.py  models.py  utilities.py
mirror_ai/controlnet/: __init__.py  controlnet_union.py  model.py  preprocessor.py
nbs/: 01_apis.ipynb  02_debug_controlnet.ipynb  03_debug_lightning.ipynb  04_debug_lightning_depth.ipynb  05_debug_lightning_depth_pose.ipynb  06_debug_image_pipeline.ipynb  07_debug_pipeline_attribs.ipynb  08_debug_pipeline_hyper.ipynb
static/: styles.css
